[package]
name = "wasm-canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.69"
console_error_panic_hook = "0.1.7"
fastrand = "1.9.0"
gloo-timers = { version = "0.2.6", features = ["futures"] }
image = "0.24.5"
js-sys = "0.3.61"
rand = "0.8.5"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
instant = { version = "0.1", features = ["wasm-bindgen"] }


[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
]

[dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.3.0"


[profile.release]
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false